welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int = 0;
while (!estSurBiscuit()) {
	avance();
}
if (avance()) {
	(nbPas = nbPas + 1;)
}
prendBiscuit();
recule(nbPas:Int);